[tool.poetry]
name = "calculog-backend"
version = "0.1.0"
description = ""
authors = ["lonewanderer27 <adrianejames27@gmail.com>"]
readme = "README.md"
packages = [{include = "calculog_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
